<resources>
    <string name="app_name">Now</string>
    <string name="map_api_key">AIzaSyCGvf-HbfwdoqDOggHeLJUU4YI0jv_qbuE</string>
    <string name="facebook_app_id">809871782682457</string>
    <string name="you_need_enter_password">Bạn cần nhập mật khẩu !!!</string>
    <string name="new_password_must_be_difference_current_password">Mật khẩu mới phải khác mật khẩu hiện tại !!!</string>
    <string name="you_need_enter_current_password">Bạn cần nhập mật khẩu hiện tại !!!</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_fail">Tài khoản hoặc mặt khẩu không chính xác</string>
    <string name="login_account">Đăng nhập tài khoản</string>
    <string name="account">Tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="register">Đăng kí</string>
    <string name="you_need_type_in_all_info">Bạn cần điền tất cả các mục</string>
    <string name="register_now"><u>Đăng kí</u></string>
    <string name="to_continue">để tiếp tục</string>
    <string name="no_data_to_display">Không có dữ liệu !!!</string>
    <string name="no_on_going_order">Không có đơn hàng đang tới !!!</string>
    <string name="do_you_want_to_logout">Bạn có muốn đăng xuất không?</string>
    <string name="do_you_want_to_change_password">Bạn có muốn đổi mật khẩu không?</string>
    <string name="do_you_want_to_cancel_order">Bạn có muốn hủy đơn hàng không?</string>
    <string name="please_complete_all_info">Vui lòng điền đầy đủ thông tin</string>
    <string name="agree">Đồng ý</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="option_yes">Có</string>
    <string name="option_no">Không</string>
    <string name="recommend">Gợi ý</string>
    <string name="see_more">Xem thêm ></string>
    <string name="address">Địa chỉ</string>
    <string name="branch">Chi nhánh</string>
    <string name="input_quantity">Nhập số lượng</string>
    <string name="add_item">Thêm món</string>
    <string name="item">Món</string>
    <string name="no_result">Không có kết quả</string>
    <string name="find_dish_location">Tìm kiếm món ăn, địa chỉ &#8230;</string>
    <string name="do_you_want_delete_all_draft_orders">Bạn có muốn xóa tất cả đơn nháp?</string>
    <string name="do_you_want_delete_this_draft_order">Bạn có muốn xóa đơn nháp này?</string>
    <string name="do_you_want_reset_draft_order">Bạn có muốn làm mới giỏ hàng?</string>
    <string name="do_you_want_delete_this_items">Bạn có muốn xóa món ăn này?</string>
    <string name="submit_order_success">Gửi yêu cầu thành công !!!</string>
    <string name="notice">Thông báo</string>
    <string name="logout">Đăng xuất</string>
    <string name="cart">Giỏ hàng</string>
    <string name="reset">Làm mới</string>
    <string name="note">Ghi chú</string>
    <string name="delivery">Giao ngay</string>
    <string name="quick_search">Tìm nhanh</string>
    <string name="on_going">Đang tới</string>
    <string name="complete">Hoàn thành</string>
    <string name="history">Lịch sử</string>
    <string name="order">Đơn hàng</string>
    <string name="draft_order">Đơn nháp</string>
    <string name="delete_draft_order_success">Xoá đơn nháp thành công</string>
    <string name="delete_all_draft_order_success">Xoá tất cả đơn nháp thành công</string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="delete">Xóa</string>
    <string name="close">Đóng</string>
    <string name="cancel">Hủy</string>
    <string name="cancel_order">Huỷ đơn hàng</string>
    <string name="cancel_order_success">Huỷ đơn hàng thành công !!!</string>
    <string name="done">Xong</string>
    <string name="information">Thông tin</string>
    <string name="edit_info">Thay đổi thông tin</string>
    <string name="edit_account_info_success">Thay đổi thông tin tài khoản thành công !!!</string>
    <string name="edit">Sửa</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="change_info">Đổi thông tin</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="out_of_stock">Hết hàng</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="msg_out_of_stock">Không đủ sản phẩm</string>
    <string name="fast_delivery">Giao nhanh</string>
    <string name="delivery_to">Giao tới</string>
    <string name="distance">Khoảng cách</string>
    <string name="register_success">Đăng kí thành công !!!</string>
    <string name="register_fail">Đăng kí thất bại !!!</string>
    <string name="email_exists">Email đã tồn tại !!!</string>
    <string name="you_need_enter_your_full_name">Bạn cần nhập họ tên !!!</string>
    <string name="you_need_enter_email">Bạn cần nhập email !!!</string>
    <string name="wrong_email_format">Sai định dạng email !!!</string>
    <string name="or_login_with">Hoặc đăng nhập bằng</string>
    <string name="txt_preferential">Ưu đãi</string>
    <string name="submit_order">Gửi yêu cầu</string>
    <string name="detail">Chi tiết</string>
    <string name="process">Xử lý</string>
    <string name="price">giá</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="product">sản phẩm</string>
    <string name="location">Địa điểm</string>
    <string name="ha_noi">Hà Nội</string>
    <string name="tp_hcm">TP.HCM</string>
    <string name="drinks">Đồ uống</string>
    <string name="food">Đồ ăn</string>
    <string name="liquor">Rượu</string>
    <string name="all_service">Tất cả</string>
    <string name="flowers">Hoa</string>
    <string name="all">Tất cả</string>
    <string name="favorite">Yêu thích</string>
    <string name="promotion">khuyến mãi</string>
    <string name="your_location">Vị trí của bạn</string>
    <string name="add_favorite_success">Thêm cửa hàng yêu thích thành công !!!</string>
    <string name="remove_favorite_success">Bỏ cửa hàng yêu thích thành công !!!</string>
    <string name="add_favorite_fail">Thêm cửa hàng yêu thích không thành công !!!</string>
    <string name="remove_favorite_fail">Bỏ yêu thích không thành công !!!</string>
    <string name="remove_favorite">Bỏ thích</string>
    <string name="you_need_login">Bạn cần đăng nhập !!!</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="change_password_success">Thay đổi mật khẩu thành công !!!</string>
    <string name="current_password_incorrect">Mật khẩu hiện tại không đúng !!!</string>
    <string name="change_password_fail">Thay đổi mật khẩu thất bại !!!</string>
    <string name="password_not_match">Mật khẩu không trùng khớp !!!</string>
    <string name="repeat_password">Lặp lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="require_password">Mật khẩu ít nhất 6 kí tự và 1 kí tự hoa</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
