<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:src="@drawable/icon_search_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorBlack"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnImgAccount"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_add_user_32dp"
            app:border_color="@color/colorWhite"
            app:border_width="2dp" />

        <Button
            android:id="@+id/btnLoginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:paddingStart="15dp"
            android:text="@string/login_account"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnHistory"
        style="@style/btn_in_fragment_account"
        android:text="@string/history" />

    <View style="@style/horizontal_line" />

    <Button
        android:id="@+id/btnFavorite"
        style="@style/btn_in_fragment_account"
        android:text="@string/favorite" />

    <View style="@style/horizontal_line" />

    <Button
        android:id="@+id/btnInfo"
        style="@style/btn_in_fragment_account"
        android:text="@string/account_information" />

    <Button
        android:id="@+id/btnLogoutAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/colorRed" />

</LinearLayout>