<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageButton
            android:id="@+id/btnBackRegister"
            style="@style/img_back" />

        <TextView
            style="@style/text_title_activity"
            android:text="@string/register" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/you_need_type_in_all_info"
            android:textColor="@color/colorWarning" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edtFullName"
            style="@style/my_text_input_layout"
            android:layout_marginTop="5dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.example.hieuhoang.now.CustomView.ClearEditText
                android:id="@+id/edtFullName"
                style="@style/clear_edit_text"
                android:hint="@string/full_name"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edtEmail"
            style="@style/my_text_input_layout"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.example.hieuhoang.now.CustomView.ClearEditText
                android:id="@+id/edtEmail"
                style="@style/clear_edit_text"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edtPassword"
            style="@style/my_text_input_layout"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.example.hieuhoang.now.CustomView.PasswordEditText
                android:id="@+id/edtPassword"
                style="@style/clear_edit_text"
                android:hint="@string/password"
                app:useStrike="true"
                app:useValidate="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/require_password"
            android:textColor="@color/colorText" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edtRepeatPassword"
            style="@style/my_text_input_layout"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.example.hieuhoang.now.CustomView.PasswordEditText
                android:id="@+id/edtRepeatPassword"
                style="@style/clear_edit_text"
                android:hint="@string/repeat_password"
                app:useStrike="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_login"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>