<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewChangePassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:visibility="visible">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edtOldPassword"
        style="@style/my_text_input_layout"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.example.hieuhoang.now.CustomView.PasswordEditText
            android:id="@+id/edtOldPassword"
            style="@style/clear_edit_text"
            android:hint="@string/old_password"
            app:useStrike="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edtPassword"
        style="@style/my_text_input_layout"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.example.hieuhoang.now.CustomView.PasswordEditText
            android:id="@+id/edtPassword"
            style="@style/clear_edit_text"
            android:hint="@string/new_password"
            app:useStrike="true"
            app:useValidate="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/require_password"
        android:textColor="@color/colorText" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edtRepeatPassword"
        style="@style/my_text_input_layout"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.example.hieuhoang.now.CustomView.PasswordEditText
            android:id="@+id/edtRepeatPassword"
            style="@style/clear_edit_text"
            android:hint="@string/repeat_password"
            app:useStrike="true" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
