<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.example.hieuhoang.now.View.AccountInfo.AccountInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/img_back" />

        <TextView
            style="@style/text_title_activity"
            android:text="@string/account_information" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_edtEmail"
                style="@style/my_text_input_layout"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.example.hieuhoang.now.CustomView.ClearEditText
                    android:id="@+id/edtFullName"
                    style="@style/clear_edit_text"
                    android:hint="@string/full_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/my_text_input_layout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.example.hieuhoang.now.CustomView.ClearEditText
                    android:id="@+id/edtPhone"
                    style="@style/clear_edit_text"
                    android:hint="@string/phone_number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/my_text_input_layout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/clear_edit_text"
                    android:enabled="false"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="0dp"
                android:background="@color/colorTransparent"
                android:gravity="end|center_vertical"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/viewChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_edtOldPassword"
                    style="@style/my_text_input_layout"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.example.hieuhoang.now.CustomView.PasswordEditText
                        android:id="@+id/edtOldPassword"
                        style="@style/clear_edit_text"
                        android:hint="@string/old_password"
                        app:useStrike="true"
                        app:useValidate="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_edtPassword"
                    style="@style/my_text_input_layout"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.example.hieuhoang.now.CustomView.PasswordEditText
                        android:id="@+id/edtPassword"
                        style="@style/clear_edit_text"
                        android:hint="@string/new_password"
                        app:useStrike="true"
                        app:useValidate="true"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/require_password"
                    android:textColor="@color/colorText" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_edtRepeatPassword"
                    style="@style/my_text_input_layout"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <com.example.hieuhoang.now.CustomView.PasswordEditText
                        android:id="@+id/edtRepeatPassword"
                        style="@style/clear_edit_text"
                        android:hint="@string/repeat_password"
                        app:useStrike="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnAction"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/change_password" />
</LinearLayout>
