<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/notice"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvContentDialog"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/do_you_want_delete_all_draft_orders"
            android:textColor="@color/colorText" />

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/option_yes"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorGray" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>