<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            style="@style/image_button_search"
            android:src="@drawable/icon_search_24dp"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:background="@drawable/vienden"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOnGoing"
                android:text="@string/on_going"
               style="@style/button_in_bill"
                />

            <View
                style="@style/vertical_line_in_bill"/>

            <Button
                android:id="@+id/btnHistory"
                style="@style/button_in_bill"
                android:text="@string/history"
                />
            <View
                style="@style/vertical_line_in_bill"/>

            <Button
                android:id="@+id/btnDraftOrder"
                style="@style/button_in_bill"
                android:text="@string/draft_order"
                />

        </LinearLayout>
        <ImageButton
            android:id="@+id/btnSearch"
            style="@style/image_button_search"
            android:src="@drawable/icon_search_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewContentBill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/contentOngoing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <FrameLayout
            android:id="@+id/contentHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <FrameLayout
            android:id="@+id/contentDraft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/viewLoginToContinue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:background="@color/colorTransparent"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_continue"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>
    </LinearLayout>



</LinearLayout>