<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/favorite"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"/>

        <ImageButton
            android:id="@+id/btnSearch"
            style="@style/image_button_search"
            android:src="@drawable/icon_search_24dp" />
    </LinearLayout>

    <View
        style="@style/horizontal_line" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFavorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

    </android.support.v4.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/viewLoginToContinue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/to_continue"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_to_display"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>